port to 1.19.3, version 1: see StitchImpl for the code overview. main issue is suboptimal performance and deadlock potential when there are 32 or more texture atlases (vanilla uses 10)